# picoder

./: .gitignore  AUDIT.md  Cargo.toml  Cross.toml  LICENSE  PICODE.md  PICODER.md  README.md  build.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: agent.rs  api.rs  askpass.rs  auth.rs  config.rs  diff.rs  main.rs  mcp.rs  sysinfo.rs  tools.rs  ui.rs
src/tools/: bash.rs
src/ui/: banner.rs  helpers.rs  palette.rs  types.rs
