[package]
name = "picode"
version = "0.1.0"
edition = "2021"
description = "A tiny full-screen agentic coding CLI for the Raspberry Pi Zero W"

[[bin]]
name = "picode"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }
regex = "1"
glob = "0.3"
similar = "2"
textwrap = { version = "0.16", default-features = false, features = ["unicode-width", "unicode-linebreak"] }
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
