[package]
name = "picoder"
version = "0.2.138"
edition = "2021"
description = "A tiny full-screen agentic coding CLI for the Raspberry Pi Zero W"

[[bin]]
name = "picoder"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }
regex = "1"
unicode-normalization = "0.1"
glob = "0.3"
similar = "2"
textwrap = { version = "0.16", default-features = false, features = ["unicode-width", "unicode-linebreak"] }
unicode-width = "0.2"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# Fast on-device iteration build for the Jetson AGX Orin. Thin LTO + parallel
# codegen-units cut incremental rebuilds ~40% vs release's fat LTO/codegen-units=1,
# at negligible runtime cost. Runtime tuning (target-cpu=cortex-a78, opt-level=3)
# still comes from .cargo/config.toml for the native gnu triple, so this matches
# release on speed while building faster. Build with `cargo build --profile orin`;
# binary lands at target/orin/picoder. Use the release profile for the canonical
# installed binary.
[profile.orin]
inherits = "release"
lto = "thin"
codegen-units = 16
